# RMV-TASK03

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  findhsv copy.cpp
src/: findhsv.cpp  findhsv.h  fit.cpp  fit.h  main.cpp
